--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <p>
                     I am a beginner web developer focused on backend development because I find it more satisfying and fulfilling to work behind the scenes. Since I can work where I want to, I can guarantee that I deliver products and services with good quality and results driven by passion.
 
-I’m currently learning <span>Node.js</span> fundamentals and its framework <span>Express.js</span> through project-based learning. I’m also open to opportunities and collaboration. You can view my projects on <a href="https://github.com" class="underline" target="_blank" rel="noopener">GitHub</a> feel free to suggest improvements or corrections, as I truly appreciate feedback that helps me become even better.
+I’m currently learning <span>Node.js</span> fundamentals and its framework <span>Express.js</span> through project-based learning. I’m also open to opportunities and collaboration. You can view my projects on <a href="https://github.com/J-P-D-20" class="underline" target="_blank" rel="noopener">GitHub</a> feel free to suggest improvements or corrections, as I truly appreciate feedback that helps me become even better.
                         you can reach me on <a href="#contact" class="underline">dumanonjhomary2@Gmail.com</a>  
                 </p>
             </div>
@@ -125,9 +125,8 @@ I’m currently learning <span>Node.js</span> fundamentals and its framework <sp
                 <h2 id="contact-title">Contact <br><span>Me</span></h2>
                 <address>
                   <i class="fa-solid fa-envelope"></i>: <a href="mailto:dumanonjhomary2">dumanonjhomary2@Gmail.com</a><br>
-                  <i class="fa-brands fa-facebook"></i>: <a href="https://web.facebook.com/jhomary.dumanon.1">Jhomary Dumanon</a><br>
+                  <i class="fa-brands fa-facebook"></i>: <a href="https://web.facebook.com/jhomary.dumanon.1" target="_blank" rel="noopener noreferrer">Jhomary Dumanon</a><br>
                   <i class="fa-brands fa-linkedin"></i>: <a href="www.linkedin.com/in/jhomary-dumanon-0103322b3">Jhomary Dumanon</a>
-                   
                 </address>
             </div>
         </section>
