--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="tab-icon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">  
 
-    <title>Jhomary Portfolio</title>
+    <title>JPD Portfolio</title>
     
 </head>
 <body>
