--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ I’m currently learning <span>Node.js</span> fundamentals and its framework <sp
                 <address>
                   <i class="fa-solid fa-envelope"></i>: <a href="mailto:dumanonjhomary2">dumanonjhomary2@Gmail.com</a><br>
                   <i class="fa-brands fa-facebook"></i>: <a href="https://web.facebook.com/jhomary.dumanon.1" target="_blank" rel="noopener noreferrer">Jhomary Dumanon</a><br>
-                  <i class="fa-brands fa-linkedin"></i>: <a href="www.linkedin.com/in/jhomary-dumanon-0103322b3">Jhomary Dumanon</a>
+                  <i class="fa-brands fa-linkedin"></i>: <a href="https://www.linkedin.com/in/jhomary-dumanon-0103322b3/">Jhomary Dumanon</a>
                 </address>
             </div>
         </section>
