--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <td>Git & Github</td>
               </tr>
               <tr>
-                <td><img src="images/HTML.png" alt="HTML image"></td>
+                <td><img src="images/HTML-removebg-preview.png" alt="HTML image"></td>
                 <td><img src="images/CSS.png" alt="CSS image"></td>
                 <td><img src="images/Javascript.png" alt="Javascript image"></td>
                 <td><img src="images/Java.png" alt="Java image"></td>
@@ -129,6 +129,7 @@
                 <td><img src="images/express-js.png" alt="express image"></td>
                 <td><img src="images/thunderclient.Default" alt="thunderclient image"></td>
                 <td><img src="images/C_Logo.png" alt="C image"></td>
+                <td><img src="images/mysql-removebg-preview.png" alt="my sql image"></td>
               </tr>
             </tbody>
           </table>
